# MC-mod-Migrator

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_deser.rs
src-tauri/src/: cancellation.rs  concurrency.rs  http.rs  lib.rs  main.rs  models.rs  pe_version.rs
src-tauri/src/commands/: assets.rs  backup.rs  conflicts.rs  deps.rs  diff.rs  history.rs  identify.rs  manifest.rs  market.rs  market_extra.rs  market_undo.rs  mod.rs  modpack.rs  presets.rs  progress.rs  report.rs  target_mods.rs  transfer.rs  update.rs  versions.rs
src-tauri/src/compat/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/hash/: mod.rs
src-tauri/src/instance/: mod.rs  paths.rs
src-tauri/src/jar/: mod.rs
src-tauri/src/providers/: curseforge.rs  endpoints.rs  github.rs  market_pcl.rs  mcmod.rs  mod.rs  modrinth.rs  packs.rs  sgu_litematic.rs
src-tauri/src/version/: mod.rs
src/components/: AssetTable.tsx  AssetTransferPreview.tsx  CategoryTabs.tsx  InstancePicker.tsx  MarketProjectBody.tsx  MigrationAlerts.tsx  MigrationHistoryDialog.tsx  MigrationPresetsPanel.tsx  ModDiffView.tsx  ModTable.tsx  ModVersionPicker.tsx  ProgressBar.tsx  TransferPreview.tsx  UpdateDialog.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  (+3 more)
src/contexts/: AppUpdateContext.tsx  ModsContext.tsx
src/hooks/: useAppUpdate.ts  useAppVersion.ts  useMods.ts
src/lib/: instances.ts
src/pages/: Home.tsx  Market.tsx  Settings.tsx
update/: latest.json.example  serve.mjs
