[package]
name = "mc-mod-migrator"
version = "0.2.1"
description = "MC Mod 换端助手"
authors = ["you"]
edition = "2021"

[lib]
name = "mc_mod_migrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
anyhow = "1"
thiserror = "2"
hex = "0.4"
futures = "0.3"
zip = "2"
regex = "1"
scraper = "0.22"
urlencoding = "2"
semver = "1"
winapi = { version = "0.3", features = ["winver"] }
